@@ -2,6 +2,9 @@ dgm-lib v3.0.0
  * `dgm::AppStateConfig` marked as final
  * `dgm::Clip` is now nodiscard and final
  * `dgm::Camera` is now final
+ * `dgm::Error` replaces `dgm::ErrorMessage`
+    * Contains message and a stacktrace
+    * This is a `std::expected` version of `dgm::Exception`
 
 dgm-lib v2.x.x
  * `dgm::Animation::getSpeed` was marked as noexcept
